--- a/group7.ipynb
+++ b/group7.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -24,10 +24,10 @@
     {
      "data": {
       "text/plain": [
-       "313"
+       "361"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +96,14 @@
     "tf.random.set_seed(0)\n",
     "# set up the hyperparameter\n",
     "MEMORY_SIZE = 800_000\n",
-    "GAMMA = 0.9\n",
-    "ALPHA = 0.9\n",
+    "GAMMA = 0.95\n",
+    "ALPHA = 0.1\n",
     "NUM_STEPS_FOR_UPDATE = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -130,24 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_42\"\n",
+      "Model: \"sequential_6\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_168 (Dense)            (None, 128)               64128     \n",
+      "dense_24 (Dense)             (None, 128)               64128     \n",
       "_________________________________________________________________\n",
-      "dense_169 (Dense)            (None, 128)               16512     \n",
+      "dense_25 (Dense)             (None, 128)               16512     \n",
       "_________________________________________________________________\n",
-      "dense_170 (Dense)            (None, 128)               16512     \n",
+      "dense_26 (Dense)             (None, 128)               16512     \n",
       "_________________________________________________________________\n",
-      "dense_171 (Dense)            (None, 6)                 774       \n",
+      "dense_27 (Dense)             (None, 6)                 774       \n",
       "=================================================================\n",
       "Total params: 97,926\n",
       "Trainable params: 97,926\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
     "# calculate and get the epsilon after decay\n",
     "def get_new_epsilon(epsilon):\n",
     "  E_MIN = 0.01\n",
-    "  E_DECAY = 0.05\n",
+    "  E_DECAY = 0.005\n",
     "  return max(E_MIN, E_DECAY * epsilon)\n",
     "\n",
     "# get next state by categorical data array into numerical values\n",
@@ -254,25 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 1000 | Total point average of the last 100 episodes: -103.33"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set up the condition, train the model and get the average reward\n",
-    "def train():\n",
-    "  NUM_EPISODES = 1000\n",
-    "  MAX_TIMESTEPS = 100\n",
+    "def train(NUM_EPISODES, MAX_TIMESTEPS):\n",
+    "  # NUM_EPISODES = 1000\n",
+    "  # MAX_TIMESTEPS = 100\n",
     "  memory_buffer = deque(maxlen=MEMORY_SIZE)\n",
     "  target_model.set_weights(model.get_weights())\n",
-    "  epsilon = 0.2\n",
+    "  epsilon = 0.02\n",
     "  points_history = []\n",
     "\n",
     "  for i in range(NUM_EPISODES):\n",
@@ -300,9 +292,25 @@
     "    points_history.append(total_points)\n",
     "    avg_points = np.mean(points_history[-100:])\n",
     "    epsilon = get_new_epsilon(epsilon)\n",
-    "    print(f\"\\rEpisode {i+1} | Total point average of the last {100} episodes: {avg_points:.2f}\", end=\"\")\n",
-    "    \n",
-    "train()"
+    "    print(f\"\\rEpisode {i+1} | Total point average of the last {100} episodes: {avg_points:.2f}\", end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 1000 | Total point average of the last 100 episodes: -102.52"
+     ]
+    }
+   ],
+   "source": [
+    "# call train function to get the result\n",
+    "train(1000,100)"
    ]
   }
  ],
